# api/person_contoller.go
@@ -2,11 +2,11 @@ package api
 
 import (
 	"encoding/json"
-	"github.com/Unbel1evab7e/bank-interface/db/entity"
 	"github.com/Unbel1evab7e/bank-interface/domain"
 	"github.com/Unbel1evab7e/bank-interface/domain/dto"
 	"github.com/Unbel1evab7e/bank-interface/integration/dadata"
 	"github.com/Unbel1evab7e/bank-interface/service"
+	jwt "github.com/appleboy/gin-jwt/v2"
 	"github.com/gin-gonic/gin"
 	"github.com/google/martian/log"
 	"io"
@@ -16,16 +16,29 @@ import (
 type PersonController struct {
 	DaDataClient  *dadata.DaDataClient
 	PersonService *service.PersonService
+	JwtMiddleware *jwt.GinJWTMiddleware
 }
 
-func NewPersonController(personService *service.PersonService, daDataClient *dadata.DaDataClient, routerGroup *gin.RouterGroup) *PersonController {
+func NewPersonController(personService *service.PersonService,
+	daDataClient *dadata.DaDataClient,
+	routerGroup *gin.RouterGroup,
+	jwtMiddleware *jwt.GinJWTMiddleware) *PersonController {
 	controller := &PersonController{
 		DaDataClient:  daDataClient,
 		PersonService: personService,
+		JwtMiddleware: jwtMiddleware,
 	}
 
-	routerGroup.GET("/persons/suggestions", controller.GetSuggestions)
-	routerGroup.GET("/persons", controller.Login)
+	auth := routerGroup.Group("/auth")
+
+	auth.Use(jwtMiddleware.MiddlewareFunc())
+
+	{
+		auth.GET("/addresses", controller.GetSuggestions)
+	}
+
+	routerGroup.POST("/persons/login", controller.Login)
+	routerGroup.POST("/persons/logout", controller.Logout)
 	routerGroup.POST("/persons", controller.RegisterPerson)
 
 	return controller
@@ -40,7 +53,7 @@ func NewPersonController(personService *service.PersonService, daDataClient *dad
 //	@Success	200		{object}	domain.Response
 //	@Failure	400		{object}	domain.Response
 //	@Failure	500		{object}	domain.Response
-//	@Router		/persons/suggestions [get]
+//	@Router		/auth/addresses [get]
 func (pc *PersonController) GetSuggestions(c *gin.Context) {
 	q := c.Request.URL.Query().Get("query")
 
@@ -105,33 +118,23 @@ func (pc *PersonController) RegisterPerson(c *gin.Context) {
 //	@Summary	Login and Auth person
 //	@Tags		Persons
 //	@Produce	json
-//	@Param		phone		query		string	false	"Телефон клиента"
-//	@Param		password	query		string	false	"Пароль клиента"
-//	@Success	200			{object}	domain.Response
-//	@Failure	400			{object}	domain.Response
-//	@Failure	500			{object}	domain.Response
-//	@Router		/persons [get]
+//	@Param		login	body		dto.LoginDto	false	"Объект логина"
+//	@Success	200		{object}	domain.Response
+//	@Failure	400		{object}	domain.Response
+//	@Failure	500		{object}	domain.Response
+//	@Router		/persons/login [post]
 func (pc *PersonController) Login(c *gin.Context) {
-	ph := c.Request.URL.Query().Get("phone")
+	pc.JwtMiddleware.LoginHandler(c)
+}
 
-	if ph == "" {
-		c.JSON(http.StatusBadRequest, domain.GenerateErrorResponse(`Parameter "phone" is required`))
-		return
-	}
-
-	pass := c.Request.URL.Query().Get("password")
-
-	if pass == "" {
-		c.JSON(http.StatusBadRequest, domain.GenerateErrorResponse(`Parameter "password" is required`))
-		return
-	}
-
-	person, err := pc.PersonService.GetPersonByPhoneAndPassword(ph, pass)
-	if err != nil {
-		c.JSON(http.StatusInternalServerError, domain.GenerateErrorResponse("Fail to get person"))
-		return
-	}
-
-	c.SetCookie("Authorize", "", 60000, "", "", true, false)
-	c.JSON(http.StatusOK, domain.GenerateSuccessResponse[entity.Person](person))
+// Logout godoc
+//
+//	@Summary	Logout person
+//	@Tags		Persons
+//	@Success	200	{object}	domain.Response
+//	@Failure	400	{object}	domain.Response
+//	@Failure	500	{object}	domain.Response
+//	@Router		/persons/logout [post]
+func (pc *PersonController) Logout(c *gin.Context) {
+	pc.JwtMiddleware.LogoutHandler(c)
 }
