# domain/dto/login_dto.go
@@ -1,0 +1,6 @@
+package dto
+
+type LoginDto struct {
+	Phone    string `form:"phone" json:"phone" binding:"required"`
+	Password string `form:"password" json:"password" binding:"required"`
+}
